tests/ui/public_caps_mask_reintroduction.stderr
error[E0425]: cannot find type `CapsMask` in module `hibana::substrate::cap`
 --> tests/ui/public_caps_mask_reintroduction.rs:2:58
  |
2 | ...rate::cap::CapsMask>();
  |               ^^^^^^^^ not found in `hibana::substrate::cap`
